@@ -96,6 +96,7 @@ def parse_opts():
         {'name': 'decoding_threads', 'default': 1, 'action':'store', 'help':'number of threads used to decode'},
         {'name': 'encoding_threads', 'default': 1, 'action':'store', 'help':'number of threads used to encode'},
         {'name': 'single_frame', 'default': False, 'action':'store_true', 'help':'extract a single frame'},
+        {'name': 'seek', 'default': 0, 'action':'store', 'help':'start the transcode from an offset (in seconds)'},
     ]
 
     formatter = optparse.IndentedHelpFormatter(max_help_position=60, width=120)
