@@ -5,6 +5,7 @@ Version 0.10.0~dev
 	* Bootstrap a test suite
 	* Add a "--version" option to toolbox2-transcode
 	* Allow to transcode a single frame
+	* Allow to seek (start the transcode at a specified offset)
 	* Various fixes
 
 Version 0.9.0 Released on 2014/09/17
